fix overflow horizontal scroll

--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -25,7 +25,7 @@
       position: absolute;
       right: 0;
       bottom: 3vw;
-      transform: rotate(-30deg);
+      // transform: rotate(-30deg);
     }
   }
 
